// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interaction Row Column Resize Tests should get horizontal filed resize style by field for all resize type and table mode 1`] = `
Object {
  "height": 30,
  "heightByField": null,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": 5,
  "widthByField": Object {
    "testField": 5,
  },
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get horizontal filed resize style by field for current resize type 1`] = `
Object {
  "height": 30,
  "heightByField": null,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": null,
  "widthByField": Object {
    "testFieldId": 5,
  },
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get horizontal filed resize style by field for current resize type and table mode 1`] = `
Object {
  "height": 30,
  "heightByField": null,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": null,
  "widthByField": Object {
    "testField": 5,
  },
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get horizontal filed resize style by field for selected resize type 1`] = `
Object {
  "height": 30,
  "heightByField": null,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": null,
  "widthByField": Object {
    "test-cell-a": 5,
    "test-cell-b": 5,
  },
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get vertical cell resize style 1`] = `
Object {
  "height": 2,
  "heightByField": Object {
    "testField": 2,
  },
  "maxLines": 1,
  "showTreeLeafNodeAlignDot": false,
  "textOverflow": "ellipsis",
  "widthByField": null,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get vertical cell resize style 2`] = `
Object {
  "height": 30,
  "heightByField": null,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "widthByField": null,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get vertical cell resize style 3`] = `
Object {
  "height": 30,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": 96,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get vertical filed resize style by field for current resize type 1`] = `
Object {
  "height": null,
  "heightByField": Object {
    "testFieldId": 2,
  },
  "maxLines": 1,
  "showTreeLeafNodeAlignDot": false,
  "textOverflow": "ellipsis",
  "widthByField": null,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get vertical filed resize style by field for selected resize type 1`] = `
Object {
  "height": null,
  "heightByField": Object {
    "test-cell-a": 2,
    "test-cell-b": 2,
  },
  "maxLines": 1,
  "showTreeLeafNodeAlignDot": false,
  "textOverflow": "ellipsis",
  "widthByField": null,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should get vertical filed resize style by rowId for table mode 1`] = `
Object {
  "height": 2,
  "heightByField": Object {
    "0": 2,
  },
  "maxLines": 1,
  "showTreeLeafNodeAlignDot": false,
  "textOverflow": "ellipsis",
  "widthByField": null,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should rerender by resize col cell 1`] = `
Object {
  "height": 30,
  "heightByField": null,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": 40,
  "widthByField": Object {
    "testField": 40,
  },
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should rerender by resize row cell 1`] = `
Object {
  "height": 2,
  "heightByField": Object {
    "testField": 2,
  },
  "maxLines": 1,
  "showTreeLeafNodeAlignDot": false,
  "textOverflow": "ellipsis",
  "widthByField": null,
  "wordWrap": true,
}
`;

exports[`Interaction Row Column Resize Tests should rerender by resize row cell 2`] = `
Object {
  "height": 30,
  "maxLines": 1,
  "textOverflow": "ellipsis",
  "width": 96,
  "wordWrap": true,
}
`;
